// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`artworks controller DELETE endpoints deleteArtworks should respond with status 200 and correct body 1`] = `
{
  "acknowledged": true,
  "deletedCount": 2,
}
`;

exports[`artworks controller GET endpoints getArtwork should respond with status 200 and correct body 1`] = `
{
  "artwork": {
    "__v": 0,
    "_id": "662e92b5d628570afa5357c3",
    "categories": [
      {
        "name": "Title",
        "subcategories": [],
        "values": [
          "Title",
        ],
      },
    ],
    "collectionName": "collection",
    "createdAt": "2024-09-10T12:17:12.821Z",
    "updatedAt": "2024-09-10T12:17:12.821Z",
  },
}
`;

exports[`artworks controller POST endpoints createArtwork should respond with status 201 and correct body 1`] = `
{
  "__v": 0,
  "_id": "66ce0bf156199c1b8df5db7d",
  "categories": [
    {
      "name": "Title",
      "subcategories": [],
      "values": [
        "Title",
      ],
    },
  ],
  "collectionName": "collection",
  "createdAt": "2024-08-27T17:25:05.352Z",
  "updatedAt": "2024-08-27T17:25:05.352Z",
}
`;

exports[`artworks controller PUT endpoints editArtwork should respond with status 201 and correct body 1`] = `
{
  "acknowledged": true,
  "matchedCount": 1,
  "modifiedCount": 1,
  "upsertedCount": 0,
  "upsertedId": null,
}
`;
